# AI-SecondLife-Talk

./: .gitignore  README.md  build_error.txt  index.html  package-lock.json  package.json
.github/workflows/: build.yml
docs/: AI_SLtalk_使用教程.md  changelog.md
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  lib.rs  lsl_server.rs  watcher.rs
src/services/: LLMService.js  TauriBridge.js  UpdateService.js
src/utils/: constants.js
